log

Thu 14 Mar 2024 08:37:29 PM UTC: 
 exercises.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:11: error: expected identifier or ‘(’ before ‘=’ token
   15 |   for(int = 0; i < size; i++)
      |           ^
exercises.c:15:16: error: ‘i’ undeclared (first use in this function)
   15 |   for(int = 0; i < size; i++)
      |                ^
exercises.c:15:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ab00d8e
Thu 14 Mar 2024 08:37:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
0df8f6c
Thu 14 Mar 2024 08:46:50 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:31: error: expected ‘;’ before ‘}’ token
   36 |     arr[i] = arr[size - 1 - i]
      |                               ^
      |                               ;
   37 |   }
      |   ~                            
exercises.c:32:7: error: variable ‘temporal’ set but not used [-Werror=unused-but-set-variable]
   32 |   int temporal;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eac3108
Thu 14 Mar 2024 08:51:09 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
3f1ab84
